--- a/assets/5daydeep/index.html
+++ b/assets/5daydeep/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="el">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -29,18 +29,18 @@
         <section data-markdown="slides/3.md"></section>
         <section>
           <section data-markdown="slides/4.md"></section>
+          <section data-markdown="slides/4.1.md"></section>
           <section data-markdown="slides/5.md"></section>
         </section>
         <section>
           <section data-markdown="slides/6.md"></section>
-          <section data-markdown="slides/composer-json.md"></section>
-          <section data-markdown="slides/framework-agnostic.md"></section>
-          <section data-markdown="slides/coding-style.md"></section>
-          <section data-markdown="slides/unit-tests.md"></section>
-          <section data-markdown="slides/docblock.md"></section>
+          <section data-markdown="slides/7.md"></section>
+          <section data-markdown="slides/8.md"></section>
+          <section data-markdown="slides/8.1.md"></section>
+          <section data-markdown="slides/9.md"></section>
+          <section data-markdown="slides/11.md"></section>
+          <section data-markdown="slides/12.md"></section>
         </section>
-
-        <section data-markdown="slides/examples.md"></section>
         <section data-markdown="slides/thanks.md"></section>
       </div>
     </div>
